infrastructure/cloudformation.yml
Parameters:
  BucketName:
    Type: String
    Description: The name of the S3 bucket to create

  VpcId:
    Type: AWS::EC2::VPC::Id

Resources:
#  Simplified iam policy. In real life, producer and receiver should have different policies.
  IAMPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: queue-demo-iam-policy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - s3:PutObject
            Resource: !Sub "arn:aws:s3:::${S3Bucket}/*"
          - Effect: "Allow"
            Action:
              - "sqs:SendMessage"
              - "sqs:ReceiveMessage"
              - "sqs:DeleteMessage"
            Resource: !GetAtt PdfQueue.Arn

  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      RoleName: queue-demo-ec2-role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
        - !Ref IAMPolicy

  EC2RoleInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2Role

  IAMUser:
    Type: AWS::IAM::User
    Properties:
      UserName: queue-demo-user
      ManagedPolicyArns:
        - !Ref IAMPolicy

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref BucketName
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false

  S3BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref S3Bucket
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action: s3:GetObject
            Resource: !Sub "arn:aws:s3:::${S3Bucket}/*"
            Principal: "*"

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for queue demo
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: queue-demo-web-server
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Egress to everywhere
          FromPort: 0
          IpProtocol: "-1"
          ToPort: 65535
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: SSH from anywhere
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          Description: Http from anywhere
          FromPort: 8080
          ToPort: 8080
          IpProtocol: tcp

  WorkerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for queue demo worker
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: queue-demo-worker
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Egress to everywhere
          FromPort: 0
          IpProtocol: "-1"
          ToPort: 65535
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: SSH from anywhere
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp

  PdfQueue:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: demo-pdf
      VisibilityTimeout: 30
      ReceiveMessageWaitTimeSeconds: 20

  SingleEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: !Ref EC2RoleInstanceProfile
      ImageId: ami-014571f1593b7be25 # Depends on the region. Replace hardcoded value
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      Tags:
        - Key: Name
          Value: queue-demo-single

  ProducerEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: !Ref EC2RoleInstanceProfile
      ImageId: ami-014571f1593b7be25 # Depends on the region. Replace hardcoded value
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      Tags:
        - Key: Name
          Value: queue-demo-producer

  ConsumerEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      IamInstanceProfile: !Ref EC2RoleInstanceProfile
      ImageId: ami-014571f1593b7be25 # Depends on the region. Replace hardcoded value
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref WorkerSecurityGroup
      Tags:
        - Key: Name
          Value: queue-demo-consumer

  SingleDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: mkovenko.rocks.
      Name: queue-demo-single-instance.mkovenko.rocks
      Type: A
      TTL: '60'
      ResourceRecords:
        - !GetAtt SingleEC2Instance.PublicIp

  ProducerDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: mkovenko.rocks.
      Name: queue-demo-producer-instance.mkovenko.rocks
      Type: A
      TTL: '60'
      ResourceRecords:
        - !GetAtt ProducerEC2Instance.PublicIp
